<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">File Explorer</string>
    <string name="hello_world">Hello world!</string>
    <string name="blue_settings">BlueTooth Settings</string>
    <string name="view_settings">Grid View</string>
    <string name="search_title">Search</string>
    <string name="search_hint">File Name</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="dropbox">DropBox</string>
    <string name="application">Application</string>
    <string name="applications">Applications</string>
    <string name="create">New</string>

</resources>