<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/copy"
        android:orderInCategory="100"
        android:title="@string/copy"/>
    <item
        android:id="@+id/paste"
        android:orderInCategory="100"
        android:title="@string/paste"/>
    <item
        android:id="@+id/cut"
        android:orderInCategory="100"
        android:title="@string/cut"/>
    <item
        android:id="@+id/rename"
        android:orderInCategory="100"
        android:title="@string/rename"/>
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"/>
    <item
        android:id="@+id/dropbox"
        android:orderInCategory="100"
        android:title="@string/dropbox"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"/>

</menu>